# Reper2

./: README.md
Amkushu999-Reper2-bacf39a29285bc7f14db74828e709c647ed554a7/: app.py  bot.py  bot_config.json  convert_to_stickers.py  create_stickers.py  direct_media_reposter.py  edit_without_storage.py  fix_bot.py  fix_channel_format.py  fix_source_channel.py  fixed_media_reposter.py  improved_channel_formats.py  main.py  media_handler.py  pyproject.toml  remove_mapping_function.py  run_media_reposter.py  set_farewell_sticker_input.py  set_session.py  simple_bot.py  simple_media_reposter.py  standalone_bot.py  update_remaining_mappings.py  updated_process_message_event.py
Amkushu999-Reper2-bacf39a29285bc7f14db74828e709c647ed554a7/assets/stickers/: constants.py
Amkushu999-Reper2-bacf39a29285bc7f14db74828e709c647ed554a7/attached_assets/: add_session.py  bot.py  config.py  fix_normalize_channel_id.py  fixed_process_message_event.py  fixes.py  gen_session.py  kill_bots.py  main.py  run.py  run_bot.py  standalone_bot.py  update_message_mapping.py
