[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "telethon>=1.40.0",
]
